# bluebubbles

./: .continueignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pylock.toml  pyproject.toml
.github/workflows/: quality.yml
apps/server/: main.py
config/client/: default.yaml  managed.example.yaml
config/server/: base.yaml  demonstration.yaml  development.yaml  production.example.yaml  testing.yaml
deployment/: server-requirements.txt
deployment/templates/: bluebubbles-backup.service  bluebubbles-backup.timer  bluebubbles.logrotate  bluebubbles.nginx.conf.template  bluebubbles.service  bluebubbles.ufw  environment
documentation/: INDEX.md  documentation-coverage.md  nea-evidence-index.md
documentation/architecture/: algorithms-and-pseudocode.md  system-architecture.md
documentation/development/: administration-and-audit.md  attachments-and-file-transfer.md  authentication-and-sessions.md  client-cryptographic-prototype.md  configuration.md  conversations-and-groups.md  database-schema-and-migrations.md  deployment-and-packaging.md  domain-models-and-errors.md  encrypted-messaging.md  local-client-storage.md  monitoring-and-workers.md  offline-queue-and-synchronisation.md  pyside6-interface.md  repository-and-tooling.md  repository-infrastructure.md  server-lifecycle-and-health.md  shared-contracts.md  task-06-execution-report.md  task-07-execution-report.md  task-08-execution-report.md  task-09-execution-report.md  task-10-execution-report.md  task-11-execution-report.md  task-12-execution-report.md  task-13-execution-report.md  task-14-execution-report.md  task-15-execution-report.md  task-16-execution-report.md  task-17-execution-report.md  task-18-execution-report.md  task-19-execution-report.md  task-20-execution-report.md  task-21-execution-report.md  task-22-execution-report.md  task-23-execution-report.md  task-24-execution-report.md  unit-of-work.md  users-contacts-and-public-keys.md  websocket-and-outbox-delivery.md
documentation/guides/: active-directory.md  administrator-guide.md  complete-startup-guide.md  developer-guide.md  user-guide.md
documentation/operations/: administration-runbooks.md  backup-restore-upgrade.md  decommissioning.md  deployment-and-installation.md
documentation/reference/: api-and-websocket-reference.md  configuration-reference.md
documentation/release/: RELEASE-NOTES-0.1.0-rc1-draft.md  known-limitations-and-evaluation.md  release-candidate-checklist.md  release-candidate-status.md
documentation/security/: security-and-cryptography.md
documentation/testing/: acceptance-matrix.md  defect-log.md  manual-test-protocols.md  testing-strategy.md
documentation/testing/evidence/: dependency-audit-2026-07-18.json  performance-local-2026-07-18.json  release-candidate-assessment-2026-07-19.json  server-dependency-audit-2026-07-18.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_refresh_token_reuse_detection.py  0003_contact_nicknames.py  0004_group_moderator_role.py  0005_text_with_attachment.py  0006_attachment_chunk_authentication.py  0007_administration_and_monitoring.py  __init__.py
packaging/windows/: BlueBubbles.iss  BlueBubbles.spec
scripts/: __init__.py
scripts/deployment/: __init__.py  backup.py  build_release.py  install_server.sh  render_nginx.py  rollback_server.sh  upgrade_server.sh  verify_release.py
scripts/development/: run_quality_checks.py
scripts/documentation/: generate_reference.py
scripts/packaging/: __init__.py  build_client.py
scripts/release/: __init__.py  assess_candidate.py
scripts/testing/: __init__.py  measure_performance.py  run_security_checks.py
specification/: 01-repository-and-tooling.md  02-shared-contracts.md  03-configuration.md  04-domain-models-and-errors.md  05-database-schema-and-migrations.md  06-repository-infrastructure.md  07-unit-of-work.md  08-server-lifecycle-and-health.md  09-authentication-and-sessions.md  10-users-contacts-and-public-keys.md  11-conversations-and-groups.md  12-client-cryptographic-prototype.md  13-encrypted-messaging.md  14-websocket-and-outbox-delivery.md  15-attachments.md  16-local-client-storage.md  17-offline-queue-and-synchronisation.md  18-pyside6-interface.md  19-administration-and-audit.md  20-monitoring-and-workers.md  21-deployment-and-packaging.md  22-full-testing.md  23-documentation.md  24-release-candidate.md  README.md  TRACEABILITY.md
specification/complete/: bluebubbles-complete-specification.md
specification/sections/: index.md
src/bluebubbles/: __init__.py  version.py
src/bluebubbles/client/: __init__.py  application.py  bootstrap.py  container.py  errors.py  main.py
src/bluebubbles/deployment/: __init__.py  integrity.py  manifests.py  templates.py
src/bluebubbles/server/: __init__.py  application.py  bootstrap.py  container.py  create_admin.py  dependencies.py  main.py  redis.py
src/bluebubbles/shared/: __init__.py  _model.py  configuration.py  constants.py  logging.py  types.py  validation.py  versioning.py
tests/: __init__.py
tests/integration/: test_database_migration.py  test_foundation_workflow.py  test_repository_postgresql.py  test_server_lifecycle_postgresql.py  test_unit_of_work_postgresql.py
tests/security/: __init__.py  test_task_22_configuration_boundaries.py  test_task_22_dependency_regressions.py  test_task_22_properties.py  test_task_22_secret_scan.py
tests/unit/: test_version.py
tests/unit/client/: test_application.py  test_authentication_services.py  test_configuration.py  test_domain.py  test_task_12_crypto.py  test_task_13_client_messaging.py  test_task_14_networking.py  test_task_15_attachments.py  test_task_15_transfer_workflows.py  test_task_16_local_storage.py  test_task_16_search.py  (+7 more)
(+269 files in other folders)
